# compytest9

./: LICENSE.html  README.md  README.rst  setup.cfg  setup.py
compytest9/: __init__.py  discomfortmethod.py  main.py  thermaldefinitions.py
compytest9.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: template_Adaptive.csv  template_PMV.csv
