[metadata]

name = compytest9
version = 0.0.1
author = Shide Salimi
author_email = shide.salimi@gmail.com
description = Package to calculate thermal discomfort severity under several thermal definitions (e.g. traditional thermal comfort, sleep comfort, occupant health and safety limits, etc.).
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/sh-s/compytest9
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6